--- a/branches/src/pages/AcceptedReports.css
+++ b/branches/src/pages/AcceptedReports.css
@@ -115,12 +115,13 @@
 
 /* ✅ Completed status styling */
 .completed-status {
-  background-color: #00c85030;
-  color: white;
-  padding: 5px 10px;
-  border-radius: 12px;
+  background-color: #136900;
+  padding: 7px 8px;
+  border-radius: 6px;
+  font-size: 12px;
+  color: #fff;
+  margin-left: 10px;
   font-weight: bold;
-  margin-right: 15px;
   display: inline-block;
 }
 
