--- a/branches/src/pages/LatestReports.css
+++ b/branches/src/pages/LatestReports.css
@@ -180,18 +180,14 @@
     font-weight: bold;
   }
   
-  .solved-status {
-    padding: 10px 16px;
-    background-color: #4caf50;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    font-weight: 600;
-    font-size: 13px !important;
-    text-wrap: nowrap;
-    display: inline-block;
-    transition: background-color;
+  .solved-badge {
+    background-color: #136900;
+    padding: 7px 8px;
+    border-radius: 6px;
+    font-size: 12px;
+    color: #fff;
+    margin-left: 10px;
+    font-weight:bold;
   }
   
 
