--- a/dashboard/src/components/pages/AcceptedReports.css
+++ b/dashboard/src/components/pages/AcceptedReports.css
@@ -128,12 +128,13 @@
 
 /* "Done" label */
 .done-mark {
-  background-color: #00c85030;
-  color: white;
-  padding: 5px 10px;
-  border-radius: 12px;
+  background-color: #136900;
+  padding: 7px 8px;
+  border-radius: 6px;
+  font-size: 12px;
+  color: #fff;
+  margin-left: 10px;
   font-weight: bold;
-  margin-right: 15px;
   display: inline-block;
 }
 
