--- a/dashboard/src/components/pages/DoneReports.css
+++ b/dashboard/src/components/pages/DoneReports.css
@@ -104,12 +104,13 @@
 }
 
 .done-label {
-  background-color: #00c85030;
-  color: white;
-  padding: 5px 10px;
-  border-radius: 12px;
+  background-color: #136900;
+  padding: 7px 8px;
+  border-radius: 6px;
+  font-size: 12px;
+  color: #fff;
+  margin-left: 10px;
   font-weight: bold;
-  margin-left: 12px; /* Ensure spacing between the date and Done label */
 }
 
 .solved-label {
