--- a/dashboard/src/components/pages/LatestReports.css
+++ b/dashboard/src/components/pages/LatestReports.css
@@ -39,6 +39,7 @@
     font-size: 12px;
     color: #fff;
     margin-left:10px;
+    font-weight:bold;
 }
 .accepted-word{
     background-color: #1369005a; /* Blue background for "Solved" */
